# salor-bin

./: .gitignore  2012-02-03_17:16:05.png.txt  INSTALL  Makefile  Makefile.am  README  SalorGUI.pro  artemahybrid.cpp  artemahybrid.h  cashdrawer.cpp  cashdrawer.h  common_includes.h  compile_salor_bin_1004.sh  compile_salor_bin_1010.sh  configure.in  customerscreen.cpp  customerscreen.h  cutecredit.cpp  cutecredit.h  display_link.cpp  display_link.h  downloader.cpp  downloader.h  drawerobserver.cpp  drawerobserver.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  make1004.sh  make1010.sh  make_order.jay  network.cpp  network.h  optionsdialog.cpp  optionsdialog.cpp.autosave  optionsdialog.h  optionsdialog.ui  ouput.txt  paths.h  (+52 more)
Windows/: installer.wix  installer.xml
debian/: README  README.Debian  README.source  changelog  control  copyright  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst  postinst.ex  postrm.ex  preinst.ex  prerm.ex  salor-bin.cron.d  salor-bin.cron.d.ex  salor-bin.default.ex  salor-bin.dirs  salor-bin.doc-base.EX  salor-bin.install  watch.ex
scripts/: salor-bin-maintenance
