AC_INIT(salorbin,1.0)
#AC_CONFIG_HEADERS(salorbin-config.h)
AM_INIT_AUTOMAKE
AC_PROG_CC
AC_PROG_CXX

AC_MSG_CHECKING(Qt4 directory)
QTDIR=xxx
AC_ARG_WITH([qt-dir],
             AC_HELP_STRING([--with-qt-dir=/path/to/Qt-4],
                            [to specify the path to the Qt-4.]),
             [QTPATHS="$withval"],
             [QTPATHS="/usr/share/qt4"])

for x in $QTPATHS; do
    if test -d $x ; then
       QTDIR="$x"
    fi
done
if test $QTDIR = xxx ; then
   AC_MSG_ERROR(Could not locate QT 4)
fi
AC_MSG_RESULT($QTDIR)


AC_MSG_NOTICE(I'm assuming this is Linux)
AC_PATH_XTRA
QTLIBS="-Wl,-rpath, -lQtCore -lQtGui -lQtWebKit -lQtNetwork $X_LIBS $X_EXTRA_LIBS -lpthread"
QTINC="-DQT_WEBKIT -DQT_NO_DEBUG -DQT_WEBKIT_LIB -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -DQT_SHARED -I$QTDIR/include/QtCore -I$QTDIR/include/QtNetwork -I$QTDIR/include/QtGui -I$QTDIR/include/QtWebKit -I$QTDIR/include -I. $X_CFLAGS"
QTBIN="$QTDIR/bin"
;;

LIBS="$LIBS $QTLIBS"
INCLUDES="$INCLUDES $QTINC"
PATH="$PATH:$QTBIN"
CXXFLAGS="$CXXFLAGS $QTINC"



AC_CONFIG_FILES(Makefile)
AC_OUTPUT